--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,14 @@
 	border-radius: 50%;
 	background-color: azure;
 }
+.google-logo::before {
+	content: "";
+	/* z-index: 100; */
+	position: absolute;
+	top: 50%;
+	right: -95px;
+	transform: translateY(-50%);
+	width: 245px;
+	height: 100px;
+	background-color: #4285f4;
+}
