--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: azure;
 }
 
 .google-logo {
@@ -24,4 +25,14 @@
 	width: 245px;
 	height: 100px;
 	background-color: #4285f4;
+}
+.google-logo::after {
+	content: "";
+	position: absolute;
+	top: -100px;
+	right: -100px;
+	width: 0;
+	height: 0;
+	border-top: 200px solid transparent;
+	border-right: 200px solid azure;
 }
