--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 .App {
-  text-align: center;
   background-color: azure;
+  display: flex;
+  justify-content: center;
 }
 
 .google-logo {
-	position: relative;
+	position: absolute;
+  top: 20%;
 	width: 300px;
 	height: 300px;
 	padding: 0;
