--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,16 @@
 .App {
   background-color: azure;
   display: flex;
+  flex-direction: row;
   justify-content: center;
 }
 
 .google-logo {
-	position: absolute;
+	position: relative;
   top: 20%;
 	width: 300px;
 	height: 300px;
-	padding: 0;
+	margin-top: 13%;
 	border-top: 100px solid #ea4335;
 	border-right: 100px solid #4285f4;
 	border-bottom: 100px solid #34a853;
@@ -38,3 +39,29 @@
 	border-top: 200px solid transparent;
 	border-right: 200px solid azure;
 }
+
+.microsoft-logo{
+	align-items: center;
+	justify-content: center;
+	  display: grid;
+	grid-template-columns: 200px 200px;
+	grid-row: auto auto;
+	grid-column-gap: 20px;
+	grid-row-gap: 20px;
+	background-color: rgb(58, 58, 58);
+	width: 400px;
+	height: 400px;
+	padding: 200px;
+	border-radius: 80px;
+	margin-top: 10%;
+	margin-left: 20%;
+  }
+  .square {
+	  width: 200px;
+	  height: 200px;
+  }
+  
+  .red{ background-color:#F35325; }
+  .green{ background-color:#81BC06; }
+  .blue{ background-color:#05A6F0; }
+  .yellow{ background-color:#FFBA08; }
